@@ -49,6 +49,7 @@ import org.structr.core.traits.definitions.NodeInterfaceTraitDefinition;
 import org.structr.core.traits.definitions.PrincipalTraitDefinition;
 import org.structr.schema.export.StructrSchema;
 import org.structr.web.entity.User;
+import org.structr.web.function.ValidateEmailFunction;
 import org.testng.annotations.Test;
 
 import java.util.List;
@@ -1176,7 +1177,7 @@ public class AccessControlTest extends StructrTest {
 		try (final Tx tx = app.tx()) {
 
 			final List<NodeInterface> users = createTestNodes(StructrTraits.USER, 1);
-			user1 = users.get(0);
+			user1 = users.getFirst();
 			user1.setProperty(Traits.of(StructrTraits.NODE_INTERFACE).key(NodeInterfaceTraitDefinition.NAME_PROPERTY), "user1");
 
 			tx.success();
@@ -1185,12 +1186,14 @@ public class AccessControlTest extends StructrTest {
 			logger.error(ex.toString());
 		}
 
+		final String invalidEmailAddress = "invalid";
+
 		try (final Tx tx = app.tx()) {
 
 			final List<NodeInterface> users = createTestNodes(StructrTraits.USER, 1);
-			final NodeInterface invalidUser =  users.get(0);
+			final NodeInterface invalidUser = users.getFirst();
 			invalidUser.setProperty(Traits.of(StructrTraits.USER).key(NodeInterfaceTraitDefinition.NAME_PROPERTY) , "tester");
-			invalidUser.setProperty(eMail, "invalid");
+			invalidUser.setProperty(eMail, invalidEmailAddress);
 
 			tx.success();
 
@@ -1198,13 +1201,13 @@ public class AccessControlTest extends StructrTest {
 
 		} catch (FrameworkException ex) {
 
-			final ErrorToken token = ex.getErrorBuffer().getErrorTokens().get(0);
+			final ErrorToken token = ex.getErrorBuffer().getErrorTokens().getFirst();
 
 			assertEquals("Invalid error code", 422, ex.getStatus());
 			assertEquals("Invalid error code", StructrTraits.USER, token.getType());
 			assertEquals("Invalid error code", PrincipalTraitDefinition.EMAIL_PROPERTY, token.getProperty());
-			assertEquals("Invalid error code", "must_contain_at_character", token.getToken());
-			assertEquals("Invalid error code", "invalid", token.getDetail());
+			assertEquals("Invalid error code", ValidateEmailFunction.getEmailValidationErrorMessageOrNull(invalidEmailAddress), token.getToken());
+			assertEquals("Invalid error code", invalidEmailAddress, token.getDetail());
 
 		}
 
